--- a/PriceModelView/Base.lproj/Main.storyboard
+++ b/PriceModelView/Base.lproj/Main.storyboard
@@ -29,10 +29,10 @@
             </objects>
             <point key="canvasLocation" x="-55" y="93"/>
         </scene>
-        <!--View Controller-->
+        <!--Price View Controller-->
         <scene sceneID="t6b-zr-zrv">
             <objects>
-                <viewController id="LeB-e6-kYh" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PriceViewController" id="LeB-e6-kYh" customClass="PriceViewController" customModule="PriceModelView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="q7z-D0-1AL"/>
                         <viewControllerLayoutGuide type="bottom" id="G38-0x-gcf"/>
@@ -49,18 +49,21 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Не сейчас" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jsw-bF-jOO">
-                                        <rect key="frame" x="139" y="13.5" width="97.5" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <color key="textColor" red="0.66274509803921566" green="0.66274509803921566" blue="0.66274509803921566" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DDh-rg-fEe">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="Не сейчас">
+                                            <color key="titleColor" red="0.66274509803921566" green="0.66274509803921566" blue="0.66274509803921566" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="Jsw-bF-jOO" firstAttribute="centerY" secondItem="oR5-MG-Jih" secondAttribute="centerY" id="9y0-2B-n6o"/>
+                                    <constraint firstItem="DDh-rg-fEe" firstAttribute="top" secondItem="oR5-MG-Jih" secondAttribute="top" id="9be-aa-4DB"/>
+                                    <constraint firstAttribute="trailing" secondItem="DDh-rg-fEe" secondAttribute="trailing" id="BUU-9X-T1A"/>
                                     <constraint firstAttribute="height" constant="50" id="uFq-He-le0"/>
-                                    <constraint firstItem="Jsw-bF-jOO" firstAttribute="centerX" secondItem="oR5-MG-Jih" secondAttribute="centerX" id="uGs-4O-CNI"/>
+                                    <constraint firstAttribute="bottom" secondItem="DDh-rg-fEe" secondAttribute="bottom" id="vFo-ow-dts"/>
+                                    <constraint firstItem="DDh-rg-fEe" firstAttribute="leading" secondItem="oR5-MG-Jih" secondAttribute="leading" id="xnb-MS-8pa"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kjh-1n-bXO">
@@ -107,20 +110,69 @@
                                     </constraints>
                                 </view>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="headerLabelCell" id="USt-MH-5Eu">
-                                        <rect key="frame" x="0.0" y="270" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="priceCell" rowHeight="100" id="USt-MH-5Eu" customClass="PriceCell" customModule="PriceModelView" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="270" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="USt-MH-5Eu" id="iiw-6z-eie">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="priceCell" id="lOM-fJ-ZQp">
-                                        <rect key="frame" x="0.0" y="314" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lOM-fJ-ZQp" id="TUj-f8-XDz">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0o2-Ac-sNS">
+                                                    <rect key="frame" x="256" y="32" width="100" height="34"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="NLz-7N-eYB"/>
+                                                        <constraint firstAttribute="height" constant="34" id="UME-kx-zbM"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <state key="normal" title="Купить">
+                                                        <color key="titleColor" red="0.11764705882352941" green="0.5490196078431373" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                </button>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bigCrown" translatesAutoresizingMaskIntoConstraints="NO" id="naA-qX-lr6">
+                                                    <rect key="frame" x="29" y="13" width="75" height="63"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="75" id="MjE-sh-Qwb"/>
+                                                        <constraint firstAttribute="height" constant="63" id="P0s-yl-s8w"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="V5L-MS-dKL">
+                                                    <rect key="frame" x="129" y="13" width="127" height="66.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="159р / шт" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5tB-JZ-5ci">
+                                                            <rect key="frame" x="0.0" y="0.0" width="81.5" height="21.5"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                                            <color key="textColor" red="0.18431372549019609" green="0.58431372549019611" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="BhL-7s-qZe">
+                                                            <rect key="frame" x="0.0" y="26.5" width="71" height="40"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 Корона" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRp-Tn-op7">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="71" height="20.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="159р" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A4f-l5-dJX">
+                                                                    <rect key="frame" x="0.0" y="20.5" width="71" height="19.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                                    <color key="textColor" red="0.55294117647058827" green="0.55294117647058827" blue="0.55294117647058827" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="0o2-Ac-sNS" firstAttribute="centerY" secondItem="iiw-6z-eie" secondAttribute="centerY" id="0gz-HW-gkG"/>
+                                                <constraint firstItem="V5L-MS-dKL" firstAttribute="top" secondItem="naA-qX-lr6" secondAttribute="top" id="8ic-bq-MsH"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="0o2-Ac-sNS" secondAttribute="trailing" constant="11" id="Gij-lI-t9w"/>
+                                                <constraint firstItem="naA-qX-lr6" firstAttribute="leading" secondItem="iiw-6z-eie" secondAttribute="leadingMargin" constant="21" id="kSK-Bx-jdp"/>
+                                                <constraint firstItem="naA-qX-lr6" firstAttribute="top" secondItem="iiw-6z-eie" secondAttribute="topMargin" constant="5" id="y8l-7e-cl2"/>
+                                                <constraint firstItem="0o2-Ac-sNS" firstAttribute="leading" secondItem="V5L-MS-dKL" secondAttribute="trailing" id="yIn-wp-Nbf"/>
+                                                <constraint firstItem="V5L-MS-dKL" firstAttribute="leading" secondItem="naA-qX-lr6" secondAttribute="trailing" constant="25" id="zgX-J5-mMA"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -136,13 +188,19 @@
                             <constraint firstItem="G38-0x-gcf" firstAttribute="top" secondItem="oR5-MG-Jih" secondAttribute="bottom" id="yBF-iC-EXB"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="priceDataPrivider" destination="MdX-ii-tF7" id="Qma-e0-cV5"/>
+                        <outlet property="tableView" destination="kjh-1n-bXO" id="2CN-lx-xOo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KEN-4Z-oCO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="MdX-ii-tF7" customClass="PriceDataProvider" customModule="PriceModelView" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="768.79999999999995" y="91.304347826086968"/>
         </scene>
     </scenes>
     <resources>
+        <image name="bigCrown" width="37" height="31"/>
         <image name="priceHeader" width="175" height="64"/>
     </resources>
 </document>
