--- a/PriceModelView/Base.lproj/Main.storyboard
+++ b/PriceModelView/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                                     <constraint firstItem="DDh-rg-fEe" firstAttribute="leading" secondItem="oR5-MG-Jih" secondAttribute="leading" id="xnb-MS-8pa"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kjh-1n-bXO">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kjh-1n-bXO">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="8VN-Qx-gOe">
@@ -114,11 +114,11 @@
                                         <rect key="frame" x="0.0" y="270" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="USt-MH-5Eu" id="iiw-6z-eie">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0o2-Ac-sNS">
-                                                    <rect key="frame" x="256" y="32" width="100" height="34"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0o2-Ac-sNS" customClass="PriceBuyButton" customModule="PriceModelView" customModuleProvider="target">
+                                                    <rect key="frame" x="256" y="33" width="100" height="34"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="100" id="NLz-7N-eYB"/>
                                                         <constraint firstAttribute="height" constant="34" id="UME-kx-zbM"/>
@@ -128,52 +128,66 @@
                                                         <color key="titleColor" red="0.11764705882352941" green="0.5490196078431373" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     </state>
                                                 </button>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bigCrown" translatesAutoresizingMaskIntoConstraints="NO" id="naA-qX-lr6">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bigCrown" translatesAutoresizingMaskIntoConstraints="NO" id="naA-qX-lr6">
                                                     <rect key="frame" x="29" y="13" width="75" height="63"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="75" id="MjE-sh-Qwb"/>
                                                         <constraint firstAttribute="height" constant="63" id="P0s-yl-s8w"/>
                                                     </constraints>
                                                 </imageView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="V5L-MS-dKL">
-                                                    <rect key="frame" x="129" y="13" width="127" height="66.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="260" verticalHuggingPriority="251" text="159р / шт" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5tB-JZ-5ci">
+                                                    <rect key="frame" x="129" y="13" width="115" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                                    <color key="textColor" red="0.18431372549019609" green="0.58431372549019611" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="BhL-7s-qZe">
+                                                    <rect key="frame" x="129" y="35" width="122" height="40"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="159р / шт" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5tB-JZ-5ci">
-                                                            <rect key="frame" x="0.0" y="0.0" width="81.5" height="21.5"/>
-                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
-                                                            <color key="textColor" red="0.18431372549019609" green="0.58431372549019611" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 Корона" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRp-Tn-op7">
+                                                            <rect key="frame" x="0.0" y="0.0" width="122" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="BhL-7s-qZe">
-                                                            <rect key="frame" x="0.0" y="26.5" width="71" height="40"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 Корона" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRp-Tn-op7">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="71" height="20.5"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="159р" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A4f-l5-dJX">
-                                                                    <rect key="frame" x="0.0" y="20.5" width="71" height="19.5"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                                    <color key="textColor" red="0.55294117647058827" green="0.55294117647058827" blue="0.55294117647058827" alpha="1" colorSpace="calibratedRGB"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
-                                                        </stackView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="159р" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A4f-l5-dJX">
+                                                            <rect key="frame" x="0.0" y="20.5" width="122" height="19.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                            <color key="textColor" red="0.55294117647058827" green="0.55294117647058827" blue="0.55294117647058827" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                 </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNN-7e-cyb">
+                                                    <rect key="frame" x="61.5" y="44" width="10.5" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="0o2-Ac-sNS" firstAttribute="centerY" secondItem="iiw-6z-eie" secondAttribute="centerY" id="0gz-HW-gkG"/>
-                                                <constraint firstItem="V5L-MS-dKL" firstAttribute="top" secondItem="naA-qX-lr6" secondAttribute="top" id="8ic-bq-MsH"/>
+                                                <constraint firstItem="5tB-JZ-5ci" firstAttribute="top" secondItem="naA-qX-lr6" secondAttribute="top" id="1v8-n9-SxB"/>
+                                                <constraint firstItem="xNN-7e-cyb" firstAttribute="top" secondItem="naA-qX-lr6" secondAttribute="bottom" constant="-32" id="8rK-v8-LMj"/>
+                                                <constraint firstItem="0o2-Ac-sNS" firstAttribute="leading" secondItem="BhL-7s-qZe" secondAttribute="trailing" constant="5" id="9hF-67-OPu"/>
+                                                <constraint firstItem="BhL-7s-qZe" firstAttribute="leading" secondItem="naA-qX-lr6" secondAttribute="trailing" constant="25" id="BTx-HL-vyn"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="0o2-Ac-sNS" secondAttribute="trailing" constant="11" id="Gij-lI-t9w"/>
+                                                <constraint firstItem="xNN-7e-cyb" firstAttribute="centerX" secondItem="naA-qX-lr6" secondAttribute="centerX" id="KjW-8I-9RT"/>
+                                                <constraint firstItem="0o2-Ac-sNS" firstAttribute="leading" secondItem="5tB-JZ-5ci" secondAttribute="trailing" constant="12" id="Kuz-2d-pwr"/>
+                                                <constraint firstItem="5tB-JZ-5ci" firstAttribute="leading" secondItem="naA-qX-lr6" secondAttribute="trailing" constant="25" id="Tff-IZ-jUQ"/>
                                                 <constraint firstItem="naA-qX-lr6" firstAttribute="leading" secondItem="iiw-6z-eie" secondAttribute="leadingMargin" constant="21" id="kSK-Bx-jdp"/>
+                                                <constraint firstItem="BhL-7s-qZe" firstAttribute="top" secondItem="5tB-JZ-5ci" secondAttribute="bottom" constant="5" id="mfw-3S-2xS"/>
                                                 <constraint firstItem="naA-qX-lr6" firstAttribute="top" secondItem="iiw-6z-eie" secondAttribute="topMargin" constant="5" id="y8l-7e-cl2"/>
-                                                <constraint firstItem="0o2-Ac-sNS" firstAttribute="leading" secondItem="V5L-MS-dKL" secondAttribute="trailing" id="yIn-wp-Nbf"/>
-                                                <constraint firstItem="V5L-MS-dKL" firstAttribute="leading" secondItem="naA-qX-lr6" secondAttribute="trailing" constant="25" id="zgX-J5-mMA"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="buyButton" destination="0o2-Ac-sNS" id="Zi5-Vx-Nrw"/>
+                                            <outlet property="crownCountLabel" destination="xNN-7e-cyb" id="2oW-or-eur"/>
+                                            <outlet property="crownImageView" destination="naA-qX-lr6" id="2pK-za-pbi"/>
+                                            <outlet property="priceForAllLabel" destination="A4f-l5-dJX" id="2Fu-vf-7jI"/>
+                                            <outlet property="priceForOneLabel" destination="5tB-JZ-5ci" id="ebX-Qh-3kh"/>
+                                            <outlet property="titleLabel" destination="kRp-Tn-op7" id="cbt-NJ-xlN"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
